plexil5/src/org/nianet/plexil5/maude2java/modelchecking/ltlparser/antlrgrammar/LTLExpressionParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 LTLExpression.g 2011-06-15 09:52:42

	package org.nianet.plexil5.maude2java.modelchecking.ltlparser.antlrgrammar;
		


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LTLExpressionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PARAM", "NEGATE", "STRING", "OR", "AND", "EQUALS", "NOTEQUALS", "LT", "LTEQ", "GT", "GTEQ", "PLUS", "MINUS", "MULT", "DIV", "NOT", "LTLAND", "LTLOR", "LTLNOT", "UNTIL", "RELEASE", "GLOBALLY", "FINALLY", "NEXT", "IMPLICATION", "EQUIVALENCE", "EVAL", "SIMPLICATION", "SEQUIVALENCE", "STATUS", "STAEXT", "NODEVAR", "OUTCOME", "CONDITION", "CONDEXT", "INTEGER", "FLOAT", "BOOLEAN", "LTLBOOL", "EscapeSequence", "UnicodeEscape", "HexDigit", "WS", "'('", "')'"
    };
    public static final int EOF=-1;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int PARAM=4;
    public static final int NEGATE=5;
    public static final int STRING=6;
    public static final int OR=7;
    public static final int AND=8;
    public static final int EQUALS=9;
    public static final int NOTEQUALS=10;
    public static final int LT=11;
    public static final int LTEQ=12;
    public static final int GT=13;
    public static final int GTEQ=14;
    public static final int PLUS=15;
    public static final int MINUS=16;
    public static final int MULT=17;
    public static final int DIV=18;
    public static final int NOT=19;
    public static final int LTLAND=20;
    public static final int LTLOR=21;
    public static final int LTLNOT=22;
    public static final int UNTIL=23;
    public static final int RELEASE=24;
    public static final int GLOBALLY=25;
    public static final int FINALLY=26;
    public static final int NEXT=27;
    public static final int IMPLICATION=28;
    public static final int EQUIVALENCE=29;
    public static final int EVAL=30;
    public static final int SIMPLICATION=31;
    public static final int SEQUIVALENCE=32;
    public static final int STATUS=33;
    public static final int STAEXT=34;
    public static final int NODEVAR=35;
    public static final int OUTCOME=36;
    public static final int CONDITION=37;
    public static final int CONDEXT=38;
    public static final int INTEGER=39;
    public static final int FLOAT=40;
    public static final int BOOLEAN=41;
    public static final int LTLBOOL=42;
    public static final int EscapeSequence=43;
    public static final int UnicodeEscape=44;
    public static final int HexDigit=45;
    public static final int WS=46;

    // delegates
    // delegators


        public LTLExpressionParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LTLExpressionParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LTLExpressionParser.tokenNames; }
    public String getGrammarFileName() { return "LTLExpression.g"; }

                              

        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            throw new ParsingRuntimeException(tokenNames,e);
        }



    public static class ltlexp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlexp"
    // LTLExpression.g:103:1: ltlexp : ltlUntilExp EOF ;
    public final LTLExpressionParser.ltlexp_return ltlexp() throws RecognitionException {
        LTLExpressionParser.ltlexp_return retval = new LTLExpressionParser.ltlexp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EOF2=null;
        LTLExpressionParser.ltlUntilExp_return ltlUntilExp1 = null;


        CommonTree EOF2_tree=null;

        try {
            // LTLExpression.g:103:10: ( ltlUntilExp EOF )
            // LTLExpression.g:103:12: ltlUntilExp EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlUntilExp_in_ltlexp509);
            ltlUntilExp1=ltlUntilExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlUntilExp1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_ltlexp511); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlexp"

    public static class ltlUntilExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlUntilExp"
    // LTLExpression.g:104:1: ltlUntilExp : ltlReleaseExp ( UNTIL ltlReleaseExp )* ;
    public final LTLExpressionParser.ltlUntilExp_return ltlUntilExp() throws RecognitionException {
        LTLExpressionParser.ltlUntilExp_return retval = new LTLExpressionParser.ltlUntilExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token UNTIL4=null;
        LTLExpressionParser.ltlReleaseExp_return ltlReleaseExp3 = null;

        LTLExpressionParser.ltlReleaseExp_return ltlReleaseExp5 = null;


        CommonTree UNTIL4_tree=null;

        try {
            // LTLExpression.g:104:14: ( ltlReleaseExp ( UNTIL ltlReleaseExp )* )
            // LTLExpression.g:104:16: ltlReleaseExp ( UNTIL ltlReleaseExp )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlReleaseExp_in_ltlUntilExp520);
            ltlReleaseExp3=ltlReleaseExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlReleaseExp3.getTree());
            // LTLExpression.g:104:29: ( UNTIL ltlReleaseExp )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==UNTIL) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // LTLExpression.g:104:30: UNTIL ltlReleaseExp
            	    {
            	    UNTIL4=(Token)match(input,UNTIL,FOLLOW_UNTIL_in_ltlUntilExp522); 
            	    UNTIL4_tree = (CommonTree)adaptor.create(UNTIL4);
            	    root_0 = (CommonTree)adaptor.becomeRoot(UNTIL4_tree, root_0);

            	    pushFollow(FOLLOW_ltlReleaseExp_in_ltlUntilExp525);
            	    ltlReleaseExp5=ltlReleaseExp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlReleaseExp5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlUntilExp"

    public static class ltlReleaseExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlReleaseExp"
    // LTLExpression.g:105:1: ltlReleaseExp : ltlBooleanOrExp ( RELEASE ltlBooleanOrExp )* ;
    public final LTLExpressionParser.ltlReleaseExp_return ltlReleaseExp() throws RecognitionException {
        LTLExpressionParser.ltlReleaseExp_return retval = new LTLExpressionParser.ltlReleaseExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token RELEASE7=null;
        LTLExpressionParser.ltlBooleanOrExp_return ltlBooleanOrExp6 = null;

        LTLExpressionParser.ltlBooleanOrExp_return ltlBooleanOrExp8 = null;


        CommonTree RELEASE7_tree=null;

        try {
            // LTLExpression.g:105:16: ( ltlBooleanOrExp ( RELEASE ltlBooleanOrExp )* )
            // LTLExpression.g:105:18: ltlBooleanOrExp ( RELEASE ltlBooleanOrExp )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlBooleanOrExp_in_ltlReleaseExp535);
            ltlBooleanOrExp6=ltlBooleanOrExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlBooleanOrExp6.getTree());
            // LTLExpression.g:105:34: ( RELEASE ltlBooleanOrExp )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==RELEASE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // LTLExpression.g:105:35: RELEASE ltlBooleanOrExp
            	    {
            	    RELEASE7=(Token)match(input,RELEASE,FOLLOW_RELEASE_in_ltlReleaseExp538); 
            	    RELEASE7_tree = (CommonTree)adaptor.create(RELEASE7);
            	    root_0 = (CommonTree)adaptor.becomeRoot(RELEASE7_tree, root_0);

            	    pushFollow(FOLLOW_ltlBooleanOrExp_in_ltlReleaseExp541);
            	    ltlBooleanOrExp8=ltlBooleanOrExp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlBooleanOrExp8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlReleaseExp"

    public static class ltlBooleanOrExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlBooleanOrExp"
    // LTLExpression.g:106:1: ltlBooleanOrExp : ltlBooleanAndExp ( LTLOR ltlBooleanAndExp )* ;
    public final LTLExpressionParser.ltlBooleanOrExp_return ltlBooleanOrExp() throws RecognitionException {
        LTLExpressionParser.ltlBooleanOrExp_return retval = new LTLExpressionParser.ltlBooleanOrExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LTLOR10=null;
        LTLExpressionParser.ltlBooleanAndExp_return ltlBooleanAndExp9 = null;

        LTLExpressionParser.ltlBooleanAndExp_return ltlBooleanAndExp11 = null;


        CommonTree LTLOR10_tree=null;

        try {
            // LTLExpression.g:106:18: ( ltlBooleanAndExp ( LTLOR ltlBooleanAndExp )* )
            // LTLExpression.g:106:20: ltlBooleanAndExp ( LTLOR ltlBooleanAndExp )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlBooleanAndExp_in_ltlBooleanOrExp551);
            ltlBooleanAndExp9=ltlBooleanAndExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlBooleanAndExp9.getTree());
            // LTLExpression.g:106:37: ( LTLOR ltlBooleanAndExp )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==LTLOR) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // LTLExpression.g:106:38: LTLOR ltlBooleanAndExp
            	    {
            	    LTLOR10=(Token)match(input,LTLOR,FOLLOW_LTLOR_in_ltlBooleanOrExp554); 
            	    LTLOR10_tree = (CommonTree)adaptor.create(LTLOR10);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LTLOR10_tree, root_0);

            	    pushFollow(FOLLOW_ltlBooleanAndExp_in_ltlBooleanOrExp557);
            	    ltlBooleanAndExp11=ltlBooleanAndExp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlBooleanAndExp11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlBooleanOrExp"

    public static class ltlBooleanAndExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlBooleanAndExp"
    // LTLExpression.g:107:1: ltlBooleanAndExp : ltlBooleanEquivExp ( LTLAND ltlBooleanEquivExp )* ;
    public final LTLExpressionParser.ltlBooleanAndExp_return ltlBooleanAndExp() throws RecognitionException {
        LTLExpressionParser.ltlBooleanAndExp_return retval = new LTLExpressionParser.ltlBooleanAndExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LTLAND13=null;
        LTLExpressionParser.ltlBooleanEquivExp_return ltlBooleanEquivExp12 = null;

        LTLExpressionParser.ltlBooleanEquivExp_return ltlBooleanEquivExp14 = null;


        CommonTree LTLAND13_tree=null;

        try {
            // LTLExpression.g:107:18: ( ltlBooleanEquivExp ( LTLAND ltlBooleanEquivExp )* )
            // LTLExpression.g:107:20: ltlBooleanEquivExp ( LTLAND ltlBooleanEquivExp )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlBooleanEquivExp_in_ltlBooleanAndExp566);
            ltlBooleanEquivExp12=ltlBooleanEquivExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlBooleanEquivExp12.getTree());
            // LTLExpression.g:107:39: ( LTLAND ltlBooleanEquivExp )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==LTLAND) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // LTLExpression.g:107:40: LTLAND ltlBooleanEquivExp
            	    {
            	    LTLAND13=(Token)match(input,LTLAND,FOLLOW_LTLAND_in_ltlBooleanAndExp569); 
            	    LTLAND13_tree = (CommonTree)adaptor.create(LTLAND13);
            	    root_0 = (CommonTree)adaptor.becomeRoot(LTLAND13_tree, root_0);

            	    pushFollow(FOLLOW_ltlBooleanEquivExp_in_ltlBooleanAndExp572);
            	    ltlBooleanEquivExp14=ltlBooleanEquivExp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlBooleanEquivExp14.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlBooleanAndExp"

    public static class ltlBooleanEquivExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlBooleanEquivExp"
    // LTLExpression.g:108:1: ltlBooleanEquivExp : ltlBooleanImplExp ( EQUIVALENCE ltlBooleanImplExp )* ;
    public final LTLExpressionParser.ltlBooleanEquivExp_return ltlBooleanEquivExp() throws RecognitionException {
        LTLExpressionParser.ltlBooleanEquivExp_return retval = new LTLExpressionParser.ltlBooleanEquivExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EQUIVALENCE16=null;
        LTLExpressionParser.ltlBooleanImplExp_return ltlBooleanImplExp15 = null;

        LTLExpressionParser.ltlBooleanImplExp_return ltlBooleanImplExp17 = null;


        CommonTree EQUIVALENCE16_tree=null;

        try {
            // LTLExpression.g:108:20: ( ltlBooleanImplExp ( EQUIVALENCE ltlBooleanImplExp )* )
            // LTLExpression.g:108:22: ltlBooleanImplExp ( EQUIVALENCE ltlBooleanImplExp )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlBooleanImplExp_in_ltlBooleanEquivExp581);
            ltlBooleanImplExp15=ltlBooleanImplExp();

            state._fsp--;

            adaptor.addChild(root_0, ltlBooleanImplExp15.getTree());
            // LTLExpression.g:108:40: ( EQUIVALENCE ltlBooleanImplExp )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==EQUIVALENCE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // LTLExpression.g:108:41: EQUIVALENCE ltlBooleanImplExp
            	    {
            	    EQUIVALENCE16=(Token)match(input,EQUIVALENCE,FOLLOW_EQUIVALENCE_in_ltlBooleanEquivExp584); 
            	    EQUIVALENCE16_tree = (CommonTree)adaptor.create(EQUIVALENCE16);
            	    root_0 = (CommonTree)adaptor.becomeRoot(EQUIVALENCE16_tree, root_0);

            	    pushFollow(FOLLOW_ltlBooleanImplExp_in_ltlBooleanEquivExp587);
            	    ltlBooleanImplExp17=ltlBooleanImplExp();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlBooleanImplExp17.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlBooleanEquivExp"

    public static class ltlBooleanImplExp_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlBooleanImplExp"
    // LTLExpression.g:109:1: ltlBooleanImplExp : ltlunary ( IMPLICATION ltlunary )* ;
    public final LTLExpressionParser.ltlBooleanImplExp_return ltlBooleanImplExp() throws RecognitionException {
        LTLExpressionParser.ltlBooleanImplExp_return retval = new LTLExpressionParser.ltlBooleanImplExp_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IMPLICATION19=null;
        LTLExpressionParser.ltlunary_return ltlunary18 = null;

        LTLExpressionParser.ltlunary_return ltlunary20 = null;


        CommonTree IMPLICATION19_tree=null;

        try {
            // LTLExpression.g:109:19: ( ltlunary ( IMPLICATION ltlunary )* )
            // LTLExpression.g:109:23: ltlunary ( IMPLICATION ltlunary )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_ltlunary_in_ltlBooleanImplExp598);
            ltlunary18=ltlunary();

            state._fsp--;

            adaptor.addChild(root_0, ltlunary18.getTree());
            // LTLExpression.g:109:32: ( IMPLICATION ltlunary )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==IMPLICATION) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // LTLExpression.g:109:33: IMPLICATION ltlunary
            	    {
            	    IMPLICATION19=(Token)match(input,IMPLICATION,FOLLOW_IMPLICATION_in_ltlBooleanImplExp601); 
            	    IMPLICATION19_tree = (CommonTree)adaptor.create(IMPLICATION19);
            	    root_0 = (CommonTree)adaptor.becomeRoot(IMPLICATION19_tree, root_0);

            	    pushFollow(FOLLOW_ltlunary_in_ltlBooleanImplExp604);
            	    ltlunary20=ltlunary();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ltlunary20.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ltlBooleanImplExp"

    public static class ltlunary_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ltlunary"
    // LTLExpression.g:110:1: ltlunary : ( ltlformula | ( LTLNOT | NEXT | FINALLY | GLOBALLY ) ltlformula );
    public final LTLExpressionParser.ltlunary_return ltlunary() throws RecognitionException {
        LTLExpressionParser.ltlunary_return retval = new LTLExpressionParser.ltlunary_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LTLNOT22=null;
        Token NEXT23=null;
        Token FINALLY24=null;
        Token GLOBALLY25=null;
        LTLExpressionParser.ltlformula_return ltlformula21 = null;

        LTLExpressionParser.ltlformula_return ltlformula26 = null;


        CommonTree LTLNOT22_tree=null;
        CommonTree NEXT23_tree=null;
        CommonTree FINALLY24_tree=null;
        CommonTree GLOBALLY25_tree=null;

        try {
            // LTLExpression.g:110:11: ( ltlformula | ( LTLNOT | NEXT | FINALLY | GLOBALLY ) ltlformula )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==EVAL||LA8_0==STATUS||(LA8_0>=OUTCOME && LA8_0<=CONDITION)||LA8_0==LTLBOOL||LA8_0==47) ) {
                alt8=1;
            }
            else if ( (LA8_0==LTLNOT||(LA8_0>=GLOBALLY && LA8_0<=NEXT)) ) {
                alt8=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // LTLExpression.g:110:13: ltlformula
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ltlformula_in_ltlunary614);
                    ltlformula21=ltlformula();

                    state._fsp--;

                    adaptor.addChild(root_0, ltlformula21.getTree());

                    }
                    break;
                case 2 :
                    // LTLExpression.g:110:26: ( LTLNOT | NEXT | FINALLY | GLOBALLY ) ltlformula
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    // LTLExpression.g:110:26: ( LTLNOT | NEXT | FINALLY | GLOBALLY )
                    int alt7=4;
                    switch ( input.LA(1) ) {
                    case LTLNOT:
                        {
                        alt7=1;
                        }
                        break;
                    case NEXT:
                        {
                        alt7=2;
                        }
                        break;
                    case FINALLY:
                        {
                        alt7=3;
                        }
                        break;
                    case GLOBALLY:
                        {
                        alt7=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 0, input);

                        throw nvae;
                    }

                    switch (alt7) {
                        case 1 :
                            // LTLExpression.g:110:27: LTLNOT
                            {
                            LTLNOT22=(Token)match(input,LTLNOT,FOLLOW_LTLNOT_in_ltlunary619); 
                            LTLNOT22_tree = (CommonTree)adaptor.create(LTLNOT22);
                            root_0 = (CommonTree)adaptor.becomeRoot(LTLNOT22_tree, root_0);


                            }
                            break;
                        case 2 :
                            // LTLExpression.g:110:35: NEXT
                            {
                            NEXT23=(Token)match(input,NEXT,FOLLOW_NEXT_in_ltlunary622); 
                            NEXT23_tree = (CommonTree)adaptor.create(NEXT23);
                            root_0 = (CommonTree)adaptor.becomeRoot(NEXT23_tree, root_0);


                            }
                            break;
                        case 3 :
                            // LTLExpression.g:110:41: FINALLY
                            {
                            FINALLY24=(Token)match(input,FINALLY,FOLLOW_FINALLY_in_ltlunary625); 
                            FINALLY24_tree = (CommonTree)adaptor.create(FINALLY24);
                            root_0 = (CommonTree)adaptor.becomeRoot(FINALLY24_tree, root_0);

